# nicotool

./: .gitignore  Main.hs  Preference.hs  README  main.hs  nicotool.GtkBuilder  nicotool.cabal
Network/: XMLSocket.hs
Network/Service/: NicoVideo.hs
Network/Service/NicoVideo/: Alart.hs  Chat.hs  HTTP.hs  XML.hs
Utils/: Browser.hs
Utils/Browser/: GoogleChrome.hs
